@@ -1,3 +1,10 @@
+12/21/2003  version 0.1.49  Ian Lewis <IanLewis@member.fsf.org>
+
+    * Fixed the icon that is rendered for a tree node when editing. Got some
+      weird behaviour out of the JTree when using the previous CellRenderer. I
+      created a new one that simply renders Element node icons since they are
+      the only editable nodes in the JTree.
+
 12/20/2003  version 0.1.48  Ian Lewis <IanLewis@member.fsf.org>
 
     * Merged some of Bilel's changes to AdapterNode making it better able to
